# coreutils

./: CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GNUmakefile  README.md  build.rs  build_common.rs  cp-arch-test.sh  crates.js  current_failing_programs.txt  deny.toml  failing_programs.txt  identify_failing_programs.sh  search-index.js  settings.html  source-files.js  split_prefix_aa  test_chmod_fuzzer.sh  test_chmod_non_utf8.sh  test_cp_permissions.sh  test_fuzzer_fail_fast.sh  test_non_utf8_fuzzer.sh  test_ptx_non_utf8.rs  test_simple_chmod.sh  xx01
arch/: all.html  fn.main.html  index.html
base32/: all.html  fn.main.html  index.html
base64/: all.html  fn.main.html  index.html
basename/: all.html  fn.main.html  index.html
cat/: all.html  fn.main.html  index.html
chgrp/: all.html  fn.main.html  index.html
chmod/: all.html  fn.main.html  index.html
chown/: all.html  fn.main.html  index.html
chroot/: all.html  fn.main.html  index.html
cksum/: all.html  fn.main.html  index.html
comm/: all.html  fn.main.html  index.html
coreutils/: all.html  constant.VERSION.html  fn.binary_path.html  fn.main.html  fn.name.html  fn.usage.html  fn.util_map.html  index.html  sidebar-items.js  type.UtilityMap.html
cp/: all.html  fn.main.html  index.html
csplit/: all.html  fn.main.html  index.html
cut/: all.html  fn.main.html  index.html
date/: all.html  fn.main.html  index.html
df/: all.html  fn.main.html  index.html
dircolors/: all.html  fn.main.html  index.html
dirname/: all.html  fn.main.html  index.html
du/: all.html  fn.main.html  index.html
echo/: all.html  fn.main.html  index.html
env/: all.html  fn.main.html  index.html
expand/: all.html  fn.main.html  index.html
expr/: all.html  fn.main.html  index.html
factor/: all.html  fn.main.html  index.html
false/: all.html  fn.main.html  index.html
fmt/: all.html  fn.main.html  index.html
fold/: all.html  fn.main.html  index.html
fuzz/: Cargo.toml
groups/: all.html  fn.main.html  index.html
hashsum/: all.html  fn.main.html  index.html
head/: all.html  fn.main.html  index.html
hostid/: all.html  fn.main.html  index.html
hostname/: all.html  fn.main.html  index.html
id/: all.html  fn.main.html  index.html
install/: all.html  fn.main.html  index.html
join/: all.html  fn.main.html  index.html
kill/: all.html  fn.main.html  index.html
libstdbuf/: all.html  fn.__stdbuf.html  index.html
link/: all.html  fn.main.html  index.html
ln/: all.html  fn.main.html  index.html
logname/: all.html  fn.main.html  index.html
ls/: all.html  fn.main.html  index.html
mkdir/: all.html  fn.main.html  index.html
mkfifo/: all.html  fn.main.html  index.html
mknod/: all.html  fn.main.html  index.html
mktemp/: all.html  fn.main.html  index.html
more/: all.html  fn.main.html  index.html
mv/: all.html  fn.main.html  index.html
nice/: all.html  fn.main.html  index.html
nl/: all.html  fn.main.html  index.html
nohup/: all.html  fn.main.html  index.html
nproc/: all.html  fn.main.html  index.html
numfmt/: all.html  fn.main.html  index.html
od/: all.html  fn.main.html  index.html
paste/: all.html  fn.main.html  index.html
pathchk/: all.html  fn.main.html  index.html
pinky/: all.html  fn.main.html  index.html
pr/: all.html  fn.main.html  index.html
printenv/: all.html  fn.main.html  index.html
printf/: all.html  fn.main.html  index.html
ptx/: all.html  fn.main.html  index.html
pwd/: all.html  fn.main.html  index.html
readlink/: all.html  fn.main.html  index.html
realpath/: all.html  fn.main.html  index.html
relpath/: all.html  fn.main.html  index.html
rm/: all.html  fn.main.html  index.html
rmdir/: all.html  fn.main.html  index.html
scenario/: failing_programs.txt  identify_failing_programs.sh
seq/: all.html  fn.main.html  index.html
shred/: all.html  fn.main.html  index.html
shuf/: all.html  fn.main.html  index.html
sleep/: all.html  fn.main.html  index.html
sort/: all.html  fn.main.html  index.html
split/: all.html  fn.main.html  index.html
stat/: all.html  fn.main.html  index.html
stdbuf/: all.html  fn.main.html  index.html
sum/: all.html  fn.main.html  index.html
sync/: all.html  fn.main.html  index.html
tac/: all.html  fn.main.html  index.html
tail/: all.html  fn.main.html  index.html
tee/: all.html  fn.main.html  index.html
test/: all.html  fn.main.html  index.html
tests/: test_date.rs  test_localization_and_colors.rs  test_util_name.rs  tests.rs
timeout/: all.html  fn.main.html  index.html
touch/: all.html  fn.main.html  index.html
tr/: all.html  fn.main.html  index.html
true/: all.html  fn.main.html  index.html
truncate/: all.html  fn.main.html  index.html
tsort/: all.html  fn.main.html  index.html
tty/: all.html  fn.main.html  index.html
uname/: all.html  fn.main.html  index.html
unexpand/: all.html  fn.main.html  index.html
uniq/: all.html  fn.main.html  index.html
unlink/: all.html  fn.main.html  index.html
uptime/: all.html  fn.main.html  index.html
users/: all.html  fn.main.html  index.html
util/: build-gnu.sh  install-sccache.sh  remaining-gnu-error.py  run-gnu-test.sh
uu_arch/: all.html  fn.uumain.html  index.html
uu_base32/: all.html  fn.uumain.html  index.html  sidebar-items.js
uu_base64/: all.html  fn.uumain.html  index.html
uu_basename/: all.html  fn.uumain.html  index.html
uu_cat/: all.html  fn.uumain.html  index.html
uu_chgrp/: all.html  fn.uumain.html  index.html  sidebar-items.js
uu_chmod/: all.html  fn.is_symlink.html  fn.strip_minus_from_mode.html  fn.uumain.html  index.html  sidebar-items.js
uu_chown/: all.html  fn.uumain.html  index.html  sidebar-items.js  struct.Group.html  struct.Passwd.html  trait.Locate.html
uu_chroot/: all.html  fn.uumain.html  index.html
uu_cksum/: all.html  fn.uumain.html  index.html
uu_comm/: all.html  fn.uumain.html  index.html
uu_cp/: all.html  enum.Attribute.html  enum.ClobberMode.html  enum.CopyMode.html  enum.Error.html  enum.OverwriteMode.html  enum.ReflinkMode.html  enum.TargetType.html  fn.ficlone.html  fn.uumain.html  (+11 more)
(+1544 files in other folders)
