# This file is part of the uutils coreutils package.
# For the full copyright and license information, please view the LICENSE
# file that was distributed with this source code.

[package]
name = "uutils"
description = "uutils is an attempt at writing universal (as in cross-platform) CLI utils in Rust. This repo is to aggregate the GNU coreutils rewrites."
license = "MIT"
repository = "https://github.com/uutils/coreutils"
version = "0.0.1"
authors = []
build = "build.rs"
autotests = false

[features]
default = [ "feat_common_core" ]
## OS feature shortcodes
macos = [ "feat_os_unix" ]
unix = [ "feat_os_unix" ]
windows = [ "feat_os_windows" ]
## project-specific feature shortcodes
nightly = []
test_unimplemented = []
## feature sets
# "feat_os_unix" == set of utilities which can be built/run on modern/usual *nix platforms
feat_os_unix = [
  "feat_common",
  "feat_os_unix_musl",
  "feat_os_unix_utmpx_required",
  #
  "stdbuf",
]
# "feat_os_unix_fuchsia" == set of utilities which can be built/run on the "Fuschia" OS (refs: <https://fuchsia.dev>; <https://en.wikipedia.org/wiki/Google_Fuchsia>)
feat_os_unix_fuchsia = [
  "feat_common_core",
  #
  "chgrp",
  "chmod",
  "chown",
  "du",
  "groups",
  "hostid",
  "install",
  "logname",
  "mkfifo",
  "mknod",
  "nice",
  "pathchk",
  "stdbuf",
  "tty",
  "uname",
  "unlink",
]
# "feat_os_unix_gnueabihf" == set of utilities which can be built/run on the "arm-unknown-linux-gnueabihf" target (ARMv6 Linux [hardfloat])
feat_os_unix_gnueabihf = [
  "feat_common",
  "feat_os_unix_musl",
  "feat_os_unix_utmpx_required",
]
# "feat_os_unix_musl" == set of utilities which can be built/run on targets binding to the "musl" library (ref: <https://musl.libc.org/about.html>)
feat_os_unix_musl = [
  "feat_common",
  #
  "chgrp",
  "chmod",
  "chown",
  "chroot",
  "du",
  "groups",
  "hostid",
  "id",
  "install",
  "kill",
  "logname",
  "mkfifo",
  "mknod",
  "nice",
  "numfmt",
  "nohup",
  "pathchk",
  "stat",
  "timeout",
  "touch",
  "tty",
  "uname",
  "unlink",
]
# "feat_os_unix_redox" == set of utilities which can be built/run on "Redox OS" (refs: <https://www.redox-os.org>; <https://en.wikipedia.org/wiki/Redox_(operating_system)>)
feat_os_unix_redox = [
  "feat_common_core",
  #
  "uname",
  "chmod",
  "install",
]
# "feat_os_unix_utmpx_required" == set of utilites requiring utmp/utmpx support
# * ref: <https://wiki.musl-libc.org/faq.html#Q:-Why-is-the-utmp/wtmp-functionality-only-implemented-as-stubs?>
feat_os_unix_utmpx_required = [
  "pinky",
  "uptime",
  "users",
  "who",
]
# "feat_os_windows" == set of utilities which can be built/run on modern/usual windows platforms
feat_os_windows = [
  "feat_common", ## == "feat_os_windows_legacy" + "hostname"
  ]
# "feat_os_windows_legacy" == slightly restricted set of utilities which can be built/run on early windows platforms (eg, "WinXP")
feat_os_windows_legacy = [
  "feat_common_core",
  #
  "arch",
  "nproc",
  "sync",
  "touch",
  "whoami",
  ]
## (common/core) feature sets
# "feat_common" == expanded set of utilities which can be built/run on the usual rust "tier 1" target platforms (ref: <https://forge.rust-lang.org/release/platform-support.html>)
feat_common = [
  "feat_common_core",
  #
  "arch",
  "hostname",
  "nproc",
  "sync",
  "touch",
  "whoami",
]
# "feat_common_core" == baseline core set of utilities which can be built/run on most targets
feat_common_core = [
  "base32",
  "base64",
  "basename",
  "cat",
  "cksum",
  "comm",
  "cp",
  "cut",
  "date",
  "dircolors",
  "dirname",
  "echo",
  "env",
  "expand",
  "expr",
  "factor",
  "false",
  "fmt",
  "fold",
  "hashsum",
  "head",
  "join",
  "link",
  "ln",
  "ls",
  "mkdir",
  "mktemp",
  "more",
  "mv",
  "nl",
  "od",
  "paste",
  "printenv",
  "printf",
  "ptx",
  "pwd",
  "readlink",
  "realpath",
  "relpath",
  "rm",
  "rmdir",
  "seq",
  "shred",
  "shuf",
  "sleep",
  "sort",
  "split",
  "sum",
  "tac",
  "tail",
  "tee",
  "test",
  "tr",
  "true",
  "truncate",
  "tsort",
  "unexpand",
  "uniq",
  "wc",
  "yes",
]

[workspace]

[dependencies]
uucore   = "0.0.2"
arch     = { version="0.0.1", optional=true, path="src/arch" }
base32   = { version="0.0.1", optional=true, path="src/base32" }
base64   = { version="0.0.1", optional=true, path="src/base64" }
basename = { version="0.0.1", optional=true, path="src/basename" }
cat      = { version="0.0.1", optional=true, path="src/cat" }
chgrp    = { version="0.0.1", optional=true, path="src/chgrp" }
chmod    = { version="0.0.1", optional=true, path="src/chmod" }
chown    = { version="0.0.1", optional=true, path="src/chown" }
chroot   = { version="0.0.1", optional=true, path="src/chroot" }
cksum    = { version="0.0.1", optional=true, path="src/cksum" }
comm     = { version="0.0.1", optional=true, path="src/comm" }
cp       = { version="0.0.1", optional=true, path="src/cp" }
cut      = { version="0.0.1", optional=true, path="src/cut" }
date     = { version="0.0.1", optional=true, path="src/date" }
dircolors= { version="0.0.1", optional=true, path="src/dircolors" }
dirname  = { version="0.0.1", optional=true, path="src/dirname" }
du       = { version="0.0.1", optional=true, path="src/du" }
echo     = { version="0.0.1", optional=true, path="src/echo" }
env      = { version="0.0.1", optional=true, path="src/env" }
expand   = { version="0.0.1", optional=true, path="src/expand" }
expr     = { version="0.0.1", optional=true, path="src/expr" }
factor   = { version="0.0.1", optional=true, path="src/factor" }
false    = { version="0.0.1", optional=true, path="src/false" }
fmt      = { version="0.0.1", optional=true, path="src/fmt" }
fold     = { version="0.0.1", optional=true, path="src/fold" }
groups   = { version="0.0.1", optional=true, path="src/groups" }
hashsum  = { version="0.0.1", optional=true, path="src/hashsum" }
head     = { version="0.0.1", optional=true, path="src/head" }
hostid   = { version="0.0.1", optional=true, path="src/hostid" }
hostname = { version="0.0.1", optional=true, path="src/hostname" }
id       = { version="0.0.1", optional=true, path="src/id" }
install  = { version="0.0.1", optional=true, path="src/install" }
join     = { version="0.0.1", optional=true, path="src/join" }
kill     = { version="0.0.1", optional=true, path="src/kill" }
link     = { version="0.0.1", optional=true, path="src/link" }
ln       = { version="0.0.1", optional=true, path="src/ln" }
ls       = { version="0.0.1", optional=true, path="src/ls" }
logname  = { version="0.0.1", optional=true, path="src/logname" }
mkdir    = { version="0.0.1", optional=true, path="src/mkdir" }
mkfifo   = { version="0.0.1", optional=true, path="src/mkfifo" }
mknod    = { version="0.0.1", optional=true, path="src/mknod" }
mktemp   = { version="0.0.1", optional=true, path="src/mktemp" }
more     = { version="0.0.1", optional=true, path="src/more" }
mv       = { version="0.0.1", optional=true, path="src/mv" }
nice     = { version="0.0.1", optional=true, path="src/nice" }
nl       = { version="0.0.1", optional=true, path="src/nl" }
nohup    = { version="0.0.1", optional=true, path="src/nohup" }
nproc    = { version="0.0.1", optional=true, path="src/nproc" }
numfmt   = { version="0.0.1", optional=true, path="src/numfmt" }
od       = { version="0.0.1", optional=true, path="src/od" }
paste    = { version="0.0.1", optional=true, path="src/paste" }
pathchk  = { version="0.0.1", optional=true, path="src/pathchk" }
pinky    = { version="0.0.1", optional=true, path="src/pinky" }
printenv = { version="0.0.1", optional=true, path="src/printenv" }
printf   = { version="0.0.1", optional=true, path="src/printf" }
ptx      = { version="0.0.1", optional=true, path="src/ptx" }
pwd      = { version="0.0.1", optional=true, path="src/pwd" }
readlink = { version="0.0.1", optional=true, path="src/readlink" }
realpath = { version="0.0.1", optional=true, path="src/realpath" }
relpath  = { version="0.0.1", optional=true, path="src/relpath" }
rm       = { version="0.0.1", optional=true, path="src/rm" }
rmdir    = { version="0.0.1", optional=true, path="src/rmdir" }
seq      = { version="0.0.1", optional=true, path="src/seq" }
shred    = { version="0.0.1", optional=true, path="src/shred" }
shuf     = { version="0.0.1", optional=true, path="src/shuf" }
sleep    = { version="0.0.1", optional=true, path="src/sleep" }
sort     = { version="0.0.1", optional=true, path="src/sort" }
split    = { version="0.0.1", optional=true, path="src/split" }
stat     = { version="0.0.1", optional=true, path="src/stat" }
stdbuf   = { version="0.0.1", optional=true, path="src/stdbuf" }
sum      = { version="0.0.1", optional=true, path="src/sum" }
sync     = { version="0.0.1", optional=true, path="src/sync" }
tac      = { version="0.0.1", optional=true, path="src/tac" }
tail     = { version="0.0.1", optional=true, path="src/tail" }
tee      = { version="0.0.1", optional=true, path="src/tee" }
test     = { version="0.0.1", optional=true, path="src/test" }
timeout  = { version="0.0.1", optional=true, path="src/timeout" }
touch    = { version="0.0.1", optional=true, path="src/touch" }
tr       = { version="0.0.1", optional=true, path="src/tr" }
true     = { version="0.0.1", optional=true, path="src/true" }
truncate = { version="0.0.1", optional=true, path="src/truncate" }
tsort    = { version="0.0.1", optional=true, path="src/tsort" }
tty      = { version="0.0.1", optional=true, path="src/tty" }
uname    = { version="0.0.1", optional=true, path="src/uname" }
unexpand = { version="0.0.1", optional=true, path="src/unexpand" }
uniq     = { version="0.0.1", optional=true, path="src/uniq" }
unlink   = { version="0.0.1", optional=true, path="src/unlink" }
uptime   = { version="0.0.1", optional=true, path="src/uptime" }
users    = { version="0.0.1", optional=true, path="src/users" }
wc       = { version="0.0.1", optional=true, path="src/wc" }
who      = { version="0.0.1", optional=true, path="src/who" }
whoami   = { version="0.0.1", optional=true, path="src/whoami" }
yes      = { version="0.0.1", optional=true, path="src/yes" }
#
# * transitive dependency via 'failure'; pin to <= v0.3.30 to avoid increasing MinSRV to v1.33.0
backtrace = ">= 0.3.3, <= 0.3.30"

[dev-dependencies]
filetime = "0.2.5"
lazy_static = "1.3.0"
libc = "0.2.62"
rand = "0.6.5"
regex = "1.0.3"
tempdir = "0.3.7"
time = "0.1.42"
unindent = "0.1.3"

[target.'cfg(unix)'.dev-dependencies]
# FIXME: this should use the normal users crate, but it conflicts with the users utility
rust-users = { git = "https://github.com/uutils/rust-users" }
unix_socket = "0.5.0"

[[bin]]
name = "uutils"
path = "src/uutils/uutils.rs"

[[test]]
name = "tests"

[patch.crates-io]
uucore = { git = "https://github.com/rivy/rust.uucore", tag = "0.0.2" }
